--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ button {
 .react-chatbot-kit-chat-bot-message {
   margin: 0 !important;
   width: auto !important;
-  background-color: #004E96 !important;
+  background-color: #004e96 !important;
 }
 
 .react-chatbot-kit-chat-inner-container {
@@ -53,20 +53,20 @@ button {
   justify-content: center;
   font-size: x-large !important;
   background-color: white !important;
-  color: #004E96 !important;
-  border-bottom: 2px solid #004E96;
+  color: #004e96 !important;
+  border-bottom: 2px solid #004e96;
   box-shadow: rgba(5, 74, 250, 0.537) 0px 5px 5px;
 }
 
 .react-chatbot-kit-chat-btn-send {
-  background-color: #004E96 !important;
-  color: #004E96 !important;
-  border-bottom: 2px solid #004E96;
+  background-color: #004e96 !important;
+  color: #004e96 !important;
+  border-bottom: 2px solid #004e96;
   box-shadow: rgba(250, 140, 5, 0.537) 0px 5px 5px;
 }
 
 .react-chatbot-kit-chat-bot-message-arrow {
-  border-right: 8px solid #004E96 !important;
+  border-right: 8px solid #004e96 !important;
 }
 
 .react-chatbot-kit-chat-bot-message {
@@ -74,33 +74,54 @@ button {
 }
 
 .option-button {
-  border-color: #004E96 !important;
+  border-color: #004e96 !important;
 }
 
 .react-chatbot-kit-chat-bot-message span {
   white-space: pre-line;
 }
 
-.react-chatbot-kit-user-chat-message{
-  background-color: #F8A925 !important;
+.react-chatbot-kit-user-chat-message {
+  background-color: #f8a925 !important;
   font-weight: 600;
   color: #ffffff !important;
 }
 
-.react-chatbot-kit-user-chat-message-arrow{
-  border-left: 8px solid #F8A925 !important;
+.react-chatbot-kit-user-chat-message-arrow {
+  border-left: 8px solid #f8a925 !important;
 }
 
-.react-chatbot-kit-user-avatar-container{
-  background-color: #ffd99a  !important;
+.react-chatbot-kit-user-avatar-container {
+  background-color: #ffd99a !important;
 }
 
-.react-chatbot-kit-user-avatar-icon{
-  fill: #F8A925 !important;
+.react-chatbot-kit-user-avatar-icon {
+  fill: #f8a925 !important;
 }
 
-@media(min-width:768px) {
+@media only screen and (max-width: 767px) {
   .react-chatbot-kit-chat-container {
-    width: 95vw !important;
+    width: 100vw !important;
+    height: 100dvh !important;
+    /* height: calc(100vh - 60px) !important; */
+  }
+  .react-chatbot-kit-chat-inner-container,
+  .react-chatbot-kit-chat-message-container {
+    height: 100% !important;
+  }
+  .react-chatbot-kit-chat-header {
+    padding-top: 50px !important;
+  }
+  .mlai_logo {
+    right: 10% !important;
+  }
+  .icici_logo {
+    left: 10% !important;
+  }
+  .react-chatbot-kit-chat-input-container{
+   margin-bottom: 5px;
+  }
+  .App {
+    min-height: auto !important;
   }
 }
